--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Javascript</title>
 </head>
 <body>
-    <h1>Javascript</h1>
-    
+    <h1>It's Javascript</h1>
+    <!-------content-->
+    <!--CTRL +/-->
+    <p id="content">hello</p>
+
+    <script>
+        document.getElementById('content'). innerHTML='Hi Marvian';
+    </script>
 </body>
 </html>
